// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`adapter output snapshots > ClaudeAdapter > file paths match snapshot 1`] = `
[
  ".claude/agents/hatch3r-readonly-agent.md",
  ".claude/agents/hatch3r-test-agent.md",
  ".claude/commands/hatch3r-agent-team.md",
  ".claude/commands/hatch3r-test-command.md",
  ".claude/hooks/hatch3r-hooks.json",
  ".claude/rules/hatch3r-scoped-rule.md",
  ".claude/rules/hatch3r-test-rule.md",
  ".claude/settings.json",
  ".claude/skills/hatch3r-test-skill/SKILL.md",
  ".mcp.json",
  "CLAUDE.md",
]
`;

exports[`adapter output snapshots > ClaudeAdapter > output structure matches snapshot 1`] = `
[
  {
    "action": "create",
    "contentMarkers": [
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".claude/agents/hatch3r-readonly-agent.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".claude/agents/hatch3r-test-agent.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".claude/commands/hatch3r-agent-team.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".claude/commands/hatch3r-test-command.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "VALID_JSON",
    ],
    "hasManagedContent": false,
    "path": ".claude/hooks/hatch3r-hooks.json",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".claude/rules/hatch3r-scoped-rule.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".claude/rules/hatch3r-test-rule.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "PERMISSIONS_CONFIG",
      "VALID_JSON",
    ],
    "hasManagedContent": false,
    "path": ".claude/settings.json",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".claude/skills/hatch3r-test-skill/SKILL.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MCP_CONFIG",
      "VALID_JSON",
    ],
    "hasManagedContent": false,
    "path": ".mcp.json",
  },
  {
    "action": "create",
    "contentMarkers": [
      "AGENT_QUICK_REFERENCE",
      "AGENT_TEAMS",
      "BRIDGE_SECTION",
      "MANAGED_BLOCK",
      "MANDATORY_BEHAVIORS",
    ],
    "hasManagedContent": true,
    "path": "CLAUDE.md",
  },
]
`;

exports[`adapter output snapshots > ClineAdapter > file paths match snapshot 1`] = `
[
  ".cline/skills/hatch3r-test-skill/SKILL.md",
  ".clinerules/workflows/hatch3r-test-command.md",
  ".roo/mcp.json",
  ".roo/rules/hatch3r-bridge.md",
  ".roo/rules/hatch3r-hook-ci-failure-label-handler.md",
  ".roo/rules/hatch3r-hook-post-merge-deploy.md",
  ".roo/rules/hatch3r-hook-pre-commit-lint-fixer.md",
  ".roo/rules/hatch3r-hook-session-start-ci-watcher.md",
  ".roo/rules/hatch3r-scoped-rule.md",
  ".roo/rules/hatch3r-test-rule.md",
  ".roomodes",
]
`;

exports[`adapter output snapshots > ClineAdapter > output structure matches snapshot 1`] = `
[
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".cline/skills/hatch3r-test-skill/SKILL.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".clinerules/workflows/hatch3r-test-command.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MCP_CONFIG",
      "VALID_JSON",
    ],
    "hasManagedContent": false,
    "path": ".roo/mcp.json",
  },
  {
    "action": "create",
    "contentMarkers": [
      "AGENT_QUICK_REFERENCE",
      "BRIDGE_SECTION",
      "MANAGED_BLOCK",
      "MANDATORY_BEHAVIORS",
    ],
    "hasManagedContent": true,
    "path": ".roo/rules/hatch3r-bridge.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".roo/rules/hatch3r-hook-ci-failure-label-handler.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".roo/rules/hatch3r-hook-post-merge-deploy.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".roo/rules/hatch3r-hook-pre-commit-lint-fixer.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".roo/rules/hatch3r-hook-session-start-ci-watcher.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".roo/rules/hatch3r-scoped-rule.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".roo/rules/hatch3r-test-rule.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "VALID_JSON",
    ],
    "hasManagedContent": false,
    "path": ".roomodes",
  },
]
`;

exports[`adapter output snapshots > CodexAdapter > file paths match snapshot 1`] = `
[
  ".codex/agents/hatch3r-readonly-agent.toml",
  ".codex/agents/hatch3r-test-agent.toml",
  ".codex/config.toml",
  ".codex/skills/hatch3r-test-skill/SKILL.md",
]
`;

exports[`adapter output snapshots > CodexAdapter > output structure matches snapshot 1`] = `
[
  {
    "action": "create",
    "contentMarkers": [],
    "hasManagedContent": false,
    "path": ".codex/agents/hatch3r-readonly-agent.toml",
  },
  {
    "action": "create",
    "contentMarkers": [],
    "hasManagedContent": false,
    "path": ".codex/agents/hatch3r-test-agent.toml",
  },
  {
    "action": "create",
    "contentMarkers": [],
    "hasManagedContent": false,
    "path": ".codex/config.toml",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".codex/skills/hatch3r-test-skill/SKILL.md",
  },
]
`;

exports[`adapter output snapshots > CopilotAdapter > file paths match snapshot 1`] = `
[
  ".github/agents/hatch3r-readonly-agent.agent.md",
  ".github/agents/hatch3r-test-agent.agent.md",
  ".github/agents/hatch3r-test-gh-agent.agent.md",
  ".github/copilot-instructions.md",
  ".github/instructions/hatch3r-scoped-rule.instructions.md",
  ".github/prompts/hatch3r-test-command.prompt.md",
  ".github/prompts/hatch3r-test-prompt.prompt.md",
  ".github/skills/hatch3r-test-skill/SKILL.md",
  ".github/workflows/copilot-setup-steps.yml",
  ".vscode/mcp.json",
]
`;

exports[`adapter output snapshots > CopilotAdapter > output structure matches snapshot 1`] = `
[
  {
    "action": "create",
    "contentMarkers": [
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".github/agents/hatch3r-readonly-agent.agent.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".github/agents/hatch3r-test-agent.agent.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".github/agents/hatch3r-test-gh-agent.agent.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "AGENT_QUICK_REFERENCE",
      "BRIDGE_SECTION",
      "MANAGED_BLOCK",
      "MANDATORY_BEHAVIORS",
    ],
    "hasManagedContent": true,
    "path": ".github/copilot-instructions.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".github/instructions/hatch3r-scoped-rule.instructions.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".github/prompts/hatch3r-test-command.prompt.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".github/prompts/hatch3r-test-prompt.prompt.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".github/skills/hatch3r-test-skill/SKILL.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".github/workflows/copilot-setup-steps.yml",
  },
  {
    "action": "create",
    "contentMarkers": [
      "VALID_JSON",
    ],
    "hasManagedContent": false,
    "path": ".vscode/mcp.json",
  },
]
`;

exports[`adapter output snapshots > CursorAdapter > file paths match snapshot 1`] = `
[
  ".cursor/agents/hatch3r-readonly-agent.md",
  ".cursor/agents/hatch3r-test-agent.md",
  ".cursor/commands/hatch3r-test-command.md",
  ".cursor/environment.json",
  ".cursor/mcp.json",
  ".cursor/rules/hatch3r-bridge.mdc",
  ".cursor/rules/hatch3r-hook-ci-failure-label-handler.mdc",
  ".cursor/rules/hatch3r-hook-post-merge-deploy.mdc",
  ".cursor/rules/hatch3r-hook-pre-commit-lint-fixer.mdc",
  ".cursor/rules/hatch3r-hook-session-start-ci-watcher.mdc",
  ".cursor/rules/hatch3r-scoped-rule.mdc",
  ".cursor/rules/hatch3r-test-rule.mdc",
  ".cursor/skills/hatch3r-test-skill/SKILL.md",
]
`;

exports[`adapter output snapshots > CursorAdapter > output structure matches snapshot 1`] = `
[
  {
    "action": "create",
    "contentMarkers": [
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".cursor/agents/hatch3r-readonly-agent.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".cursor/agents/hatch3r-test-agent.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".cursor/commands/hatch3r-test-command.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MCP_CONFIG",
      "VALID_JSON",
    ],
    "hasManagedContent": false,
    "path": ".cursor/environment.json",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MCP_CONFIG",
      "VALID_JSON",
    ],
    "hasManagedContent": false,
    "path": ".cursor/mcp.json",
  },
  {
    "action": "create",
    "contentMarkers": [
      "AGENT_QUICK_REFERENCE",
      "BRIDGE_SECTION",
      "CURSOR_ALWAYS_APPLY",
      "FRONTMATTER",
      "MANAGED_BLOCK",
      "MANDATORY_BEHAVIORS",
      "PERMISSIONS_CONFIG",
    ],
    "hasManagedContent": true,
    "path": ".cursor/rules/hatch3r-bridge.mdc",
  },
  {
    "action": "create",
    "contentMarkers": [
      "CURSOR_ALWAYS_APPLY",
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".cursor/rules/hatch3r-hook-ci-failure-label-handler.mdc",
  },
  {
    "action": "create",
    "contentMarkers": [
      "CURSOR_ALWAYS_APPLY",
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".cursor/rules/hatch3r-hook-post-merge-deploy.mdc",
  },
  {
    "action": "create",
    "contentMarkers": [
      "CURSOR_GLOBS",
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".cursor/rules/hatch3r-hook-pre-commit-lint-fixer.mdc",
  },
  {
    "action": "create",
    "contentMarkers": [
      "CURSOR_ALWAYS_APPLY",
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".cursor/rules/hatch3r-hook-session-start-ci-watcher.mdc",
  },
  {
    "action": "create",
    "contentMarkers": [
      "CURSOR_GLOBS",
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".cursor/rules/hatch3r-scoped-rule.mdc",
  },
  {
    "action": "create",
    "contentMarkers": [
      "CURSOR_ALWAYS_APPLY",
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".cursor/rules/hatch3r-test-rule.mdc",
  },
  {
    "action": "create",
    "contentMarkers": [
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".cursor/skills/hatch3r-test-skill/SKILL.md",
  },
]
`;

exports[`adapter output snapshots > WindsurfAdapter > file paths match snapshot 1`] = `
[
  ".windsurf/hooks.json",
  ".windsurf/mcp.json",
  ".windsurf/rules/hatch3r-scoped-rule.md",
  ".windsurf/rules/hatch3r-test-rule.md",
  ".windsurf/skills/hatch3r-test-skill/SKILL.md",
  ".windsurf/workflows/hatch3r-test-command.md",
  ".windsurfrules",
]
`;

exports[`adapter output snapshots > WindsurfAdapter > output structure matches snapshot 1`] = `
[
  {
    "action": "create",
    "contentMarkers": [
      "VALID_JSON",
    ],
    "hasManagedContent": false,
    "path": ".windsurf/hooks.json",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MCP_CONFIG",
      "VALID_JSON",
    ],
    "hasManagedContent": false,
    "path": ".windsurf/mcp.json",
  },
  {
    "action": "create",
    "contentMarkers": [
      "CURSOR_GLOBS",
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".windsurf/rules/hatch3r-scoped-rule.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".windsurf/rules/hatch3r-test-rule.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "FRONTMATTER",
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".windsurf/skills/hatch3r-test-skill/SKILL.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "MANAGED_BLOCK",
    ],
    "hasManagedContent": true,
    "path": ".windsurf/workflows/hatch3r-test-command.md",
  },
  {
    "action": "create",
    "contentMarkers": [
      "AGENT_QUICK_REFERENCE",
      "MANAGED_BLOCK",
      "MANDATORY_BEHAVIORS",
    ],
    "hasManagedContent": true,
    "path": ".windsurfrules",
  },
]
`;
